--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {font-family: Montserrat; font-size: 13px; padding: 10px 0px 40px 0px; color: #333;}
+body {font-family: 'Source Sans Pro', sans-serif; font-size: 13px; padding: 10px 0px 40px 0px; color: #333;}
 
 h1 {font-size: 48px; margin-bottom: 20px;}
 .highlighted {color: #06DDA0; opacity: 1; transition: opacity .25s ease-in-out;}
@@ -9,7 +9,7 @@ p a {color: #06DDA0;}
 
 .light-type {color: #777;} /* #06DDA0 */
 .dim {color: #acacac;}
-.fancy {font-family: baskerville, garamond, serif; font-weight: lighter; font-style: italic;}
+.fancy {font-family: 'Source Sans Pro', sans-serif; font-weight: lighter; font-style: regular;}
 
 #wrapper {margin: 0px auto; max-width: 900px; padding-top: 40px; }
 
@@ -39,4 +39,3 @@ input {margin: 12px 0px; border: none; border-bottom: 1px solid #333; background
 .button-pressed {background: #0CCC96;}
 
 #info {padding: 30px 0px;}
-
