--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body {font-family: 'Source Sans Pro', sans-serif; font-size: 13px; padding: 10px 0px 40px 0px; color: #333;}
 
 h1 {font-size: 48px; margin-bottom: 20px;}
-.highlighted {color: #06DDA0; opacity: 1; transition: opacity .25s ease-in-out;}
+.highlighted {color: #ff6633; opacity: 1; transition: opacity .25s ease-in-out;}
 .highlighted:hover {opacity: 0.5;}
 a {text-decoration: none; color: #333;}
 a:hover {padding-bottom: 1px; border-bottom: 1px dotted #333;}
-p a {color: #06DDA0;}
+p a {color: #ff6633;}
 
 .light-type {color: #777;} /* #06DDA0 */
 .dim {color: #acacac;}
@@ -13,9 +13,9 @@ p a {color: #06DDA0;}
 
 #wrapper {margin: 0px auto; max-width: 900px; padding-top: 40px; }
 
-ul.nav {list-style: none; margin: 0px; padding: 0px; color: #06DDA0;}
+ul.nav {list-style: none; margin: 0px; padding: 0px; color: #ff6633;}
 ul.nav li {display: inline; font-size: 12px; letter-spacing: .1em; text-transform: uppercase; padding-right: 4px;}
-ul.nav a {color: #06DDA0; border-bottom: 1px dotted #06DDA0;}
+ul.nav a {color: #ff6633; border-bottom: 1px dotted #ff6633;}
 ul.nav a.dim {color: #acacac; border-bottom: 1px dotted #acacac;}
 ul.nav a:hover {font-weight: 900;}
 
@@ -34,8 +34,8 @@ tr:nth-child(2n+2) {background: #eee;}
 
 input {margin: 12px 0px; border: none; border-bottom: 1px solid #333; background-color: transparent; padding: 0px; color: #acacac; font-size: 13px; height: 22px; font-family: Montserrat;}
 
-.sml-button {border-radius: 1px; cursor: pointer; margin-left: 4px; padding: 4px 6px; background-color: #06DDA0; font-size: 11px; text-transform: uppercase; letter-spacing: .1em; text-align: center; color: #fff; font-family: Montserrat;}
+.sml-button {border-radius: 1px; cursor: pointer; margin-left: 4px; padding: 4px 6px; background-color: #ff6633; font-size: 11px; text-transform: uppercase; letter-spacing: .1em; text-align: center; color: #fff; font-family: Montserrat;}
 .sml-button:hover {background: #eee;}
-.button-pressed {background: #0CCC96;}
+.button-pressed {background: #ff6633;}
 
 #info {padding: 30px 0px;}
